nodejs-docker-ingress/k8s/notifications.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications
spec:
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
      labels:
        app: notifications
    spec:
      containers:
      - name: notifications
        image: notifications
        imagePullPolicy: Never
        ports:
          - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
spec:
  type: NodePort
  selector:
    app: notifications
  ports:
  - port: 3001
    targetPort: 3001
    nodePort: 30001
