nodejs-docker-ingress/k8s/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
spec:
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: orders
        imagePullPolicy: Never
        ports:
          - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  type: NodePort
  selector:
    app: orders
  ports:
  - port: 3002
    targetPort: 3002
    nodePort: 30002
