nodejs-docker-ingress/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: custom-ingress
  labels:
    name: custom-ingress
spec:
  rules:
    - host: "rx.cloths.com"
      http:
        paths:
          - pathType: Prefix
            path: "/orders"
            backend:
              service:
                name: orders-service
                port:
                  number: 3002
          - pathType: Prefix
            path: "/products"
            backend:
              service:
                name: products-service
                port:
                  number: 3003
          - pathType: Prefix
            path: "/notifications"
            backend:
              service:
                name: notifications-service
                port:
                  number: 3001
